--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bufferutil": "^4.0.7",
+    "nanoid": "^4.0.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "socket.io-client": "^4.7.1",
+    "supports-color": "^9.4.0",
+    "tailwindcss": "3.3.3",
+    "utf-8-validate": "^6.0.3",
+    "zustand": "^4.3.9"
   }
 }
